<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddServiceCard"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/service_number"/>

    <EditText
        android:id="@+id/et_serviceNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/service_department"/>

    <Spinner
        android:id="@+id/spinner_department"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/spinnerOptions"
        android:spinnerMode="dropdown"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/service_cost"/>

    <EditText
        android:id="@+id/et_serviceCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/service_date"/>

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="wrap_content"
        android:layout_height="86dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner" />

    <Button
        android:id="@+id/button_add_serviceCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_service_card_activity"
        android:onClick="button_add"/>

</LinearLayout>