<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">
        <TextView
            android:id="@+id/tv_serviceNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_number_ad"/>
        <TextView
            android:id="@+id/tv_serviceDepartment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_department_list"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_serviceCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_cost_list"/>
        <TextView
            android:id="@+id/tv_serviceDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_date_list"/>
    </LinearLayout>
</LinearLayout>